<resources>
    <string-array name="npv_lunar_year_without_measure_hint">
        <item>二零一六</item>
    </string-array>
    <string-array name="npv_lunar_month_without_measure_hint">
        <item>十一</item>
    </string-array>
    <string-array name="npv_lunar_day_with_measure_hint">
        <item>初一</item>
    </string-array>
    <string name="life_circle">社交圈</string>
    <string name="skin_qian_dou_green">浅豆绿</string>
    <string name="skin_Qing_Shui_blue">清水蓝</string>
    <string name="skin_Shan_Hu_Hong">珊瑚红</string>
    <string name="skin_Liu_Xia_Fen">流霞粉</string>
    <string name="skin_Dan_Gu_green">淡钴绿</string>
    <string name="cancel_text">取消</string>
    <string name="title">这是标题</string>
    <string name="normal_sure_text">确定</string>
    <string name="permission_storage_refused">您拒绝了文件读写的权限，请到设置中修改</string>
    <string name="permission_camera_refused">您拒绝了使用摄像头的权限，请到设置中修改</string>
    <string name="permission_record_audio_refused">您拒绝了使用麦克风的权限，请到设置中修改</string>
    <string name="permission_location_refused">您拒绝了使用定位的权限，请到设置中修改</string>
    <string name="permission_read_phone_state_refused">您拒绝了读取手机信息的权限，请到设置中修改</string>
    <string name="permission_read_contont">您拒绝了读取手机通讯录的权限，请到设置中修改</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="app_name">驾考APP</string>
    <string name="load_error">重新加载</string>
    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">当前城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="hint_search_choice">搜索教练</string>
    <string name="poi_search_choice">搜索关键字</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="home_page_city">城市</string>
    <string name="test_car_book">考驾照</string>
    <string name="test_book_one">科目一/四</string>
    <string name="test_book_two">科目二</string>
    <string name="test_book_three">科目三</string>
    <string name="test_book_four">科目四</string>
    <string name="have_card_practice">有证练车</string>
    <string name="now_practice">现在练车</string>
    <string name="choose_people">选教练</string>
    <string name="choose_car_style">选车型</string>
    <string name="order_practice_car">预约练车</string>
    <string name="car_life">车生活</string>
    <string name="car_cosmetology">汽车美容</string>
    <string name="add_oil_and_maintain">加油保养</string>
    <string name="service_modify">维修改装</string>
    <string name="car_market">汽车商城</string>
    <string name="hot_activity">热门活动</string>
    <string name="get_more_welfare">获取更多福利</string>
    <string name="mine_login">登录</string>
    <string name="shifufangshi">支付方式</string>
    <string name="all_back">返回</string>
    <string name="splash_jump">跳过</string>
    <string name="tv_home">代驾</string>
    <string name="tv_home_1">首页</string>
    <string name="tv_lianminka">联名卡</string>
    <string name="tv_indent">订单</string>
    <string name="tv_mine">我的</string>
    <string name="tv_jiakao">驾考</string>
    <string name="tv_loading">加载中…</string>
    <string name="shuxian">|</string>
    <string name="tv_grade">分</string>
    <string name="tv_date">日期</string>
    <string name="tv_mingci">名次</string>
    <string name="tv_jiangjin">奖金</string>
    <string name="tv_user">用户</string>
    <string name="tv_fenshu">分数</string>
    <string name="tv_usetime">用时</string>
    <string name="tv_message">消息</string>
    <string name="tv_zongtipingjia">文字评价或选择标签</string>
    <string name="tv_fuwutaidu">服务态度</string>
    <string name="tv_jishushuiping">技术水平</string>
    <string name="tv_jianyiyijian">建议意见</string>
    <string name="tv_zishu">0/200</string>
    <string name="tv_jianyicontent">输入文字评论~</string>
    <string name="tv_tijiao">提交</string>
    <string name="tv_activitypage">活动页</string>
    <string name="tv_activityrule">活动规则</string>
    <string name="tv_dati_title">“答题赢现金”活动规则</string>
    <string name="tv_dati_content">“答题赢现金”是驾考APP为本平台已注册学员准备的一款学习娱乐赢现金相结合的活动。</string>
    <string name="tv_dati_guihua">规划如下：</string>
    <string name="tv_dati_guihua_one">1、驾考APP注册用户。</string>
    <string name="tv_dati_guihua_two">2、用户可以在全天的（0：00~24:00）任意时间内，45分钟内答100道科目一、科目四的汇合考题。</string>
    <string name="tv_dati_guihua_three">3、每天早8：00准时公布前一天的参与答题的获得名单，排名标准为分数最高、用时最少的顺序，取其前10名。</string>
    <string name="tv_dati_guihua_four">4、活动奖金以“现金”形式，存入到获奖用户在本平台中“我的钱包”里，该笔“现金”可提现也可在平台消费。</string>
    <string name="tv_dati_guihua_five">5、活动所有相关事宜及解释权归驾考APP平台所有。</string>
    <string name="zanwuindent">暂无订单</string>
    <string name="car_service">汽车服务</string>
    <string name="huichichuiwan">汇吃惠玩</string>
    <string name="food">美食</string>
    <string name="ktv">KTV</string>
    <string name="juchangyuanxian">剧场院线</string>
    <string name="zhushu">住宿</string>
    <string name="indent_money">订单金额：</string>
    <string name="xiadan_time">下单时间：</string>
    <string name="progressing">进行中</string>
    <string name="fuwushangjia">服务商家：</string>
    <string name="fuwuxinagmu">服务项目：</string>
    <string name="look_zxing">查看二维码</string>
    <string name="deleteindent">删除订单</string>
    <string name="qupingjia">去评价</string>
    <string name="bt_pay">支付</string>
    <string name="shifumoney">实付金额</string>
    <string name="lijichakan">立即查看</string>
    <string name="chakan">查看</string>
    <string name="chakanone">查看订单请到</string>
    <string name="myindent">我的订单</string>
    <string name="indentsucceed">订单支付成功</string>
    <string name="indentfabusucceed">订单发布成功</string>
    <string name="gongxininhuode">恭喜您获得</string>
    <string name="tv_jifen">积分</string>
    <string name="jiaojuan">交卷</string>
    <string name="guize">规则</string>
    <string name="_45_00">45:00</string>
    <string name="_1_100">1/100</string>
    <string name="datiyingxinajingrade">答题赢现金考试成绩</string>
    <string name="gongshifei">工时费： ¥</string>
    <string name="cailiaofei">材料费： ¥</string>
    <string name="shurugongshi">请输入您的工时费</string>
    <string name="shurucailiao">请输入您的材料费</string>
    <string name="indentzonge">订单总额：</string>
    <string name="yibidikou">可用0积分抵扣0.00元</string>
    <string name="yibishangcheng">易币商城</string>
    <string name="lingyuan">¥0</string>
    <string name="shopjianjie">商家温馨提示</string>
    <string name="rengoumai">人购买</string>
    <string name="chakantwo">查看></string>
    <string name="weixiumaidan">维修买单</string>
    <string name="baoyangmaidan">保养买单</string>
    <string name="pingjia">评价</string>
    <string name="zanwupingjia">暂无评价</string>
    <string name="daijiedan">待接单</string>
    <string name="practice_time">练车 时间：</string>
    <string name="style_jiage">类型 价格：</string>
    <string name="practice_adress">练车 区域：</string>
    <string name="jiesongdizhi">接送 地址：</string>
    <string name="lookindent">查看订单</string>
    <string name="quxiaodingdan">取消订单</string>
    <string name="monilianxi">模拟练习</string>
    <string name="baoming">报名</string>
    <string name="zhuanxinaglianxi">专项训练</string>
    <string name="chakanweizuo">查看未做</string>
    <string name="queding">确定</string>
    <string name="denglu">登录</string>
    <string name="jiaolianxiangqing">教练详情</string>
    <string name="fuwuxiangqing">服务详情</string>
    <string name="fuwumingcheng">服务名称：</string>
    <string name="zhunjiaochexing">准教车型：</string>
    <string name="cheliangxinxi">车辆信息：</string>
    <string name="fuwuquyu">服务区域</string>
    <string name="jiaolianjianjie">教练简介</string>
    <string name="cheliangfengcai">车辆风采</string>
    <string name="shared">分享</string>
    <string name="yijianyuyue">一键预约</string>
    <string name="jingyigfanwei">经营范围</string>
    <string name="maidan">买单</string>
    <string name="zuijiajiexi">最佳解析</string>
    <string name="kemuleixing">科目类型</string>
    <string name="quyu">区域</string>
    <string name="morenpaixu">默认排序</string>
    <string name="genghuanhaoma">更换号码</string>
    <string name="chongzhijine">充值金额： ¥</string>
    <string name="zhifubaozhifu">支付宝支付</string>
    <string name="xianshangposzhifu">线上POS支付</string>
    <string name="tuijianshiyong">推荐使用</string>
    <string name="weixinzhifu">微信支付</string>
    <string name="fangbiankuaijie">方便快捷</string>
    <string name="querenchongzhi">确认充值</string>
    <string name="qingbaodingbenren">提现仅支持工商银行驾考APP联名卡</string>
    <string name="chikaren">持卡人：</string>
    <string name="querenbangding">确认绑定</string>
    <string name="qingshurujiashizheng">请输入驾驶证号</string>
    <string name="quxiao">取消</string>
    <string name="xuanze">选择</string>
    <string name="qingshurushenfenzheng">请输入身份证号</string>
    <string name="tixianshenqing">提现申请已提交</string>
    <string name="tuikuanshenqing">退款申请已提交</string>
    <string name="daozhangshijian">预计到账时间：3-7个工作日</string>
    <string name="tuikuanshijian">预计到账时间：3-7个工作日</string>
    <string name="jutididian">请输入具体地址</string>
    <string name="jiaolianshoucang">优惠券</string>
    <string name="dianpushoucang">收藏</string>
    <string name="myEB">我的积分</string>
    <string name="my_wallet">钱包</string>
    <string name="my_erweima">二维码</string>
    <string name="messagenotice">消息通知</string>
    <string name="kefuzhognxin">客服中心</string>
    <string name="cleanhuancun">清理缓存</string>
    <string name="shared_app">分享APP</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="use_help">使用帮助</string>
    <string name="about_xueyiche">关于驾考APP</string>
    <string name="take_photo">拍照</string>
    <string name="photobook">从相册选取</string>
    <string name="chongzhi">充值</string>
    <string name="shuru_phone">请输入手机号码</string>
    <string name="shuruyanzhengma">请输入验证码</string>
    <string name="get_yanzhengma">获取验证码</string>
    <string name="tongyi_jieshou">登录即代表您同意驾考APP</string>
    <string name="xueyiche_xieyi">用户协议</string>
    <string name="xiangce">相册</string>
    <string name="yuyuexiaoxi">预约消息</string>
    <string name="zanwutixing">暂无提醒</string>
    <string name="dingdanxiaoxi">订单消息</string>
    <string name="xitongxiaoxi">系统消息</string>
    <string name="zanwushoucang">暂无收藏</string>
    <string name="zanwudianpu">暂无店铺</string>
    <string name="EBuse_rule">积分使用规则</string>
    <string name="jifenmingxi">积分明细</string>
    <string name="EB_rule_one">1.积分是驾考APP推出的用户回馈方式，用户可用积分在驾考APP“车生活”抵扣相应的折扣。</string>
    <string name="EB_rule_two">2.用户有以下方式获得积分：通过消费获得、通过购买积分、转发朋友圈及新用户注册。</string>
    <string name="EB_rule_three">3.比例方式：1元=100积分</string>
    <string name="wodeyue">我的零钱</string>
    <string name="tixian">提现</string>
    <string name="head">头像</string>
    <string name="name">昵称</string>
    <string name="sex">性别</string>
    <string name="post_idcard">身份证号</string>
    <string name="post_driver_book">上传驾驶证信息</string>
    <string name="location">地址</string>
    <string name="telephone_number">手机号码</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="app_banben">v1.0</string>
    <string name="copyright_c_2017_2018">copyright(c)2017-2023</string>
    <string name="daozhangyinhangka">到账银行卡：</string>
    <string name="card_name">持卡人姓名：</string>
    <string name="card_kaihuhang">开户行：</string>
    <string name="tixianjie">提现金额</string>
    <string name="quanbutixian">全部提现</string>
    <string name="xiaoyang">¥</string>
    <string name="finish">完成</string>
    <string name="miaoshuyijian">请简要描述您的问题或者您的意见建议</string>
    <string name="lianxidianhua">联系电话 (选填，便于我们联系您~)</string>
    <string name="icon_like_fill">&#xe60d;</string>
    <string name="icon_comment">&#xe621;</string>
    <string name="icon_more">&#xe61b;</string>
</resources>