<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include
        android:id="@+id/my_result_include"
        layout="@layout/indent_tijiao_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/liushiyi"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_paihang_mingci"
            android:layout_width="@dimen/zero"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/tv_mingci"
            android:textColor="@color/test_color"
            android:textSize="@dimen/text_fifteensp" />

        <TextView
            android:id="@+id/tv_paihang_yonghu"
            android:layout_width="@dimen/zero"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/tv_user"
            android:gravity="center"
            android:textColor="@color/test_color"
            android:textSize="@dimen/text_fifteensp" />

        <TextView
            android:id="@+id/tv_paihang_fenshu"
            android:layout_width="@dimen/zero"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/tv_fenshu"
            android:textColor="@color/test_color"
            android:textSize="@dimen/text_fifteensp" />

        <TextView
            android:id="@+id/tv_paihang_time"
            android:layout_width="@dimen/zero"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/tv_usetime"
            android:textColor="@color/test_color"
            android:textSize="@dimen/text_fifteensp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/yi"
        android:background="@color/all_line_color" />

    <ListView
        android:id="@+id/my_paihang_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/all_line_color"
        android:dividerHeight="@dimen/yi" />

</LinearLayout>