<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:windowTranslucentNavigation="false">


    <RadioGroup
        android:id="@+id/rg_exam_menutab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_20">

        <RadioButton
            android:id="@+id/rb_subject1"
            style="@style/MenuTab"
            android:layout_marginTop="5dp"
            android:background="@drawable/mine_selector_back"
            android:checked="true"
            android:drawableBottom="@drawable/rb_xian_select"
            android:drawablePadding="5dp"
            android:text="@string/test_book_one"
            android:textColor="@drawable/rb_select"
            android:textSize="15sp" />


        <RadioButton
            android:id="@+id/rb_subject2"
            style="@style/MenuTab"
            android:layout_marginTop="5dp"
            android:background="@drawable/mine_selector_back"
            android:drawableBottom="@drawable/rb_xian_select"
            android:drawablePadding="5dp"
            android:text="@string/test_book_two"
            android:textColor="@drawable/rb_select"
            android:textSize="15sp" />


        <RadioButton
            android:id="@+id/rb_subject3"
            style="@style/MenuTab"
            android:layout_marginTop="5dp"
            android:background="@drawable/mine_selector_back"
            android:drawableBottom="@drawable/rb_xian_select"
            android:drawablePadding="5dp"
            android:text="@string/test_book_three"
            android:textColor="@drawable/rb_select"
            android:textSize="15sp" />
    </RadioGroup>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rg_exam_menutab"/>

</RelativeLayout>