<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_thumb"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="#000" />

    <ImageView
        android:id="@+id/play_btn"
        android:layout_width="@dimen/dkplayer_play_btn_size"
        android:layout_height="@dimen/dkplayer_play_btn_size"
        android:layout_gravity="center"
        android:background="@drawable/dkplayer_shape_play_bg"
        android:padding="@dimen/dkplayer_default_spacing"
        android:src="@drawable/dkplayer_selector_play_button"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.xueyiche.zjyk.xueyiche.community.view.LikeView

        android:id="@+id/likeview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_marginRight="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:elevation="5dp"
        android:lineSpacingExtra="4dp"
        android:padding="20dp"
        android:text="标题"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="52dp"
            android:layout_height="62dp">

            <com.xueyiche.zjyk.xueyiche.mine.view.CircleImageView
                android:id="@+id/iv_head"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@mipmap/logo" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/iv_focus"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="3dp"
                android:src="@mipmap/add_focus" />
        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rl_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.xueyiche.zjyk.xueyiche.community.view.IconFontTextView
                android:id="@+id/iv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/icon_like_fill"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_anim"
                android:layout_width="85dp"
                android:layout_height="85dp" />
        </RelativeLayout>

        <TextView
            android:visibility="invisible"
            android:id="@+id/tv_likecount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="0" />

        <com.xueyiche.zjyk.xueyiche.community.view.IconFontTextView
            android:id="@+id/iv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/icon_comment"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/tv_commentcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="0" />

        <com.xueyiche.zjyk.xueyiche.community.view.IconFontTextView
            android:visibility="gone"
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/icon_more"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_sharecount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="3371" />

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rl_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/iv_record"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:background="@mipmap/ic_record" />

            <com.xueyiche.zjyk.xueyiche.mine.view.CircleImageView
                android:id="@+id/iv_head_anim"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </LinearLayout>
</FrameLayout>